Fix facet filters on mobile. Add overlay to HeaderDrawer (#1348)

--- a/assets/base.css
+++ b/assets/base.css
@@ -2314,6 +2314,17 @@ input[type='checkbox'] {
   }
 }
 
+.header__icon--menu[aria-expanded="true"]::before {
+  content: "";
+  top: 100%;
+  left: 0;
+  height: calc(var(--viewport-height, 100vh) - (var(--header-bottom-position, 100%)));
+  width: 100%;
+  display: block;
+  position: absolute;
+  background: rgba(var(--color-foreground), 0.5);
+}
+
 /* Search */
 menu-drawer + .header__search {
   display: none;
